@@ -963,8 +963,7 @@ namespace Orthanc
           
           else if (method == "DELETE")
           {
-            if (!path.empty() &&  // Cannot delete the root
-                bucket->second->DeleteItem(path))
+            if (bucket->second->DeleteItem(path))
             {
               output.SendStatus(HttpStatus_204_NoContent);
             }
