@@ -1,6 +1,12 @@
 Pending changes in the mainline
 ===============================
 
+General
+-------
+
+* Serving the content of Orthanc as a WebDAV network share
+* New configuration options: "WebDavEnabled", "WebDavDeleteAllowed" and "WebDavUploadAllowed"
+
 
 Version 1.7.4 (2020-09-18)
 ==========================
